Agregamos tags en el pytest.ini 1.0

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
     ejecutar: test para ejecutar elegiendo segun sea el caso.
+    front: solo ejecutamos pruebas front.
+    back: solo ejecutamos pruebas back.
