Agregamos mejoras readme 1.5 / + herramientas webElements

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,10 @@
 [pytest]
+python_files=test_*
+python_classes=*Tests
+python_functions=test_*
+
 markers =
     ejecutar: test para ejecutar elegiendo segun sea el caso.
     front: solo ejecutamos pruebas front.
     back: solo ejecutamos pruebas back.
+    dropdown: solo manejamos el dropdown.
