Agregamos mejoras readme 1.6 / mejoras nombres archivos

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ markers =
     front: solo ejecutamos pruebas front.
     back: solo ejecutamos pruebas back.
     dropdown: solo manejamos el dropdown.
+    current_url : validamos comandos de browser con el driver.
