sumamos mas webelements para test

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,4 @@ markers =
     back: solo ejecutamos pruebas back.
     dropdown: solo manejamos el dropdown.
     current_url : validamos comandos de browser con el driver.
+    alert: validamos alert.
