Avance Oficina / Mejoras Readme 1.9 / elementos nuevos sumados

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ markers =
     dropdown: solo manejamos el dropdown.
     current_url : validamos comandos de browser con el driver.
     alert: validamos alert.
+    iframe: interactuamos con un ifram.
