Avance Oficina / Mejoras Readme 1.9 / elementos nuevos sumados / pasamos automation testing web

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,4 @@ markers =
     current_url : validamos comandos de browser con el driver.
     alert: validamos alert.
     iframe: interactuamos con un ifram.
+    hover: validamos acciones de Actions.
